--- a/codeWars.ipynb
+++ b/codeWars.ipynb
@@ -542,6 +542,89 @@
     "\n",
     "print(maps([1,2,3]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def array_diff(a, b):\n",
+    "    return [x for x in a if x not in b]\n",
+    "\n",
+    "print(array_diff([1,2,2],[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_count(sentence):\n",
+    "    if sentence == '':\n",
+    "        return 0\n",
+    "    return 5 if sentence.find('y') <0 else 0\n",
+    "\n",
+    "print(get_count('abracadabra'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aehrsty\n"
+     ]
+    }
+   ],
+   "source": [
+    "def longest(a1, a2):\n",
+    "    return ''.join(sorted(list(set(a1+a2))))\n",
+    "\n",
+    "\n",
+    "print(longest(\"aretheyhere\", \"yestheyarehere\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 389,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d c b a\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_words(text):\n",
+    "    return text[::-1]\n",
+    "\n",
+    "print(reverse_words('a b c d'))"
+   ]
   }
  ],
  "metadata": {
